chore: changed website content

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1234,6 +1234,10 @@
   color: var(--card-text-color);
 }
 
+.open-source-content-card-text--paragraph a {
+  color: inherit;
+}
+
 /* Open Source section end */
 
 /* Call to action section start */
