--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -120,12 +120,9 @@ function activeLink(urlPart) {
       <!-- Hero Section start -->
       <section class="hero">
         <div class="hero__content">
-          <h1 class="hero__heading">Introducing <span class="hero__heading--highlight">Nightwatch 3.0</span></h1>
-          <p class="hero__sub-heading">No-compromise test automation framework with powerful set of tools to write,
-            run
-            and debug your tests across
-            web
-            and native mobile applications.</p>
+          <h1 class="hero__heading">Introducing <span class="hero__heading--highlight">Nightwatch v3</span></h1>
+          <p class="hero__sub-heading">No-compromise test automation framework with powerful set of tools to write, run and debug
+            your tests across web and native mobile applications.</p>
         </div>
 
         <div class="hero__action">
@@ -167,14 +164,12 @@ function activeLink(urlPart) {
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">One framework for all platforms.</p>
               <ul class="features__content-wrapper-description-list">
-                <li class="features__content-wrapper-description-list-item"><strong>Mobile Web</strong> Test on
-                  emulators,
-                  your own mobile device or integrate with a cloud provider.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Native Mobile</strong> Test your
-                  native iOS and Android apps with Nightwatch.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Real Desktop Browsers</strong>
-                  Avoid
-                  compromises with browser engines, test on the real thing.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Mobile Web</strong>Test on real mobile browsers or
+                  pre-installed simulators and emulators.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Native Mobile</strong>Test your native iOS and
+                  Android apps with Nightwatch.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Real Desktop Browsers</strong>Avoid compromises
+                  with browser engines, test on the real thing.</li>
               </ul>
             </div>
           </div>
@@ -267,14 +262,12 @@ function activeLink(urlPart) {
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">Save time hunting for bugs.</p>
               <ul class="features__content-wrapper-description-list">
-                <li class="features__content-wrapper-description-list-item"><strong>Pinpoint</strong>Identify the
-                  source
-                  with the built-in HTML reporter with test</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Dig deeper</strong>Travel back in
-                  time and see DOM History before and after every command.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Replicate</strong>Pause and debug
-                  your
-                  tests by trying out commands in a REPL interface.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Pinpoint</strong>Built-in HTML reporter with test
+                  statuses and HTTP logs to identify the source.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Dig deeper</strong>Travel back in time and see DOM
+                  History before and after every command.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Replicate</strong>Pause and debug your tests by
+                  trying out commands in a REPL interface.</li>
               </ul>
             </div>
           </div>
@@ -382,16 +375,14 @@ function activeLink(urlPart) {
           <div class="features__content-wrapper">
             <h3 class="features__content-wrapper-heading">Designed for scale</h3>
             <div class="features__content-wrapper-description">
-              <p class="features__content-wrapper-description-title">Built for fast, mature organizations.</p>
+              <p class="features__content-wrapper-description-title">Automate all your edge cases</p>
               <ul class="features__content-wrapper-description-list">
                 <li class="features__content-wrapper-description-list-item"><strong>Complex gestures and
                     interactions</strong>Test everything from pinch-zoom to multi-tab and iFrames.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Default parallelization and
-                    orchestration</strong>Test faster with default parallelization across multiple browsers.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Cloud grid support</strong>Scale
-                  with
-                  third
-                  party grid: BrowserStack, Sauce Labs or others</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Default parallelization</strong>Test faster with
+                  default parallelization across multiple browsers.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Cloud grid support</strong>Scale with third-party
+                  grid—BrowserStack, Sauce Labs or others.</li>
               </ul>
             </div>
           </div>
@@ -1337,10 +1328,8 @@ function activeLink(urlPart) {
                 <ul class="capabilities__card-text-list">
                   <li class="capabilities__card-text-list-item"><strong>Create Nightwatch</strong>One command to
                     install everything.</li>
-                  <li class="capabilities__card-text-list-item"><strong>IDE Extension</strong>Write, run, and
-                    debug within your IDE.</li>
-                  <li class="capabilities__card-text-list-item"><strong>Record and replay</strong>Get started
-                    without writing any test script.</li>
+                  <li class="capabilities__card-text-list-item"><strong>IDE Extension</strong>Write, run, and debug with VS Code.</li>
+                  <li class="capabilities__card-text-list-item"><strong>Record and replay</strong>Get started without writing any test script.</li>
                 </ul>
               </div>
               <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="capabilities__card-button">Get Started
@@ -1400,14 +1389,9 @@ function activeLink(urlPart) {
               <h3 class="capabilities__card-heading">Run all types of tests</h3>
               <div class="capabilities__card-text">
                 <ul class="capabilities__card-text-list">
-                  <li class="capabilities__card-text-list-item"><strong>API</strong>Test incoming requests, request
-                    headers, and post data.</li>
-                  <li class="capabilities__card-text-list-item"><strong>Accessibility</strong>Native integration with
-                    axe.
-                  </li>
-                  <li class="capabilities__card-text-list-item"><strong>Visual Testing</strong>Compare screenshots
-                    against
-                    baselines.</li>
+                  <li class="capabilities__card-text-list-item"><strong>API</strong>Test incoming requests, request headers, and post data.</li>
+                  <li class="capabilities__card-text-list-item"><strong>Accessibility</strong>Native integration with axe.</li>
+                  <li class="capabilities__card-text-list-item"><strong>Visual Testing</strong>Compare screenshots against baselines.</li>
                 </ul>
               </div>
               <a href="/about/highlights/types-of-testing.html" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
@@ -1535,14 +1519,10 @@ function activeLink(urlPart) {
               <div class="capabilities__card-text">
                 <ul class="capabilities__card-text-list">
                   <li class="capabilities__card-text-list-item"><strong>Unit</strong>Unit testing mode with support
-                    for
-                    test-doubles.</li>
-                  <li class="capabilities__card-text-list-item"><strong>Component</strong>Test components with React,
-                    Vue,
-                    & Storybook.</li>
+                    for test-doubles.</li>
+                  <li class="capabilities__card-text-list-item"><strong>Component</strong>Test components with Angular, React, and more.</li>
                   <li class="capabilities__card-text-list-item"><strong>Integration</strong>Write integration tests
-                    using
-                    Chai assertions.</li>
+                    using Chai assertions.</li>
                 </ul>
               </div>
               <a href="/about/highlights/beyond-e2e.html" class="capabilities__card-button">Learn more<svg role="img" width="24" height="24"
@@ -1787,7 +1767,7 @@ function activeLink(urlPart) {
 
       <!-- Nightwatch Performance section start -->
       <section class="performance">
-        <h2 class="performance__heading">Fast<span class="performance__heading--highlight">and Stable</span></h2>
+        <h2 class="performance__heading"><span class="performance__heading--highlight">Faster</span> than ever</h2>
 
         <article class="performance__content">
           <div class="performance__content-image">
@@ -1819,10 +1799,10 @@ function activeLink(urlPart) {
             </svg>
           </div>
           <div class="performance__content-description">
-            <p class="performance__content-description-text">Experience lightning-fast tests with Nightwatch
-              irrespective
-              of whether you run your tests on a single machine or multiple VMs.</p>
-            <a href="https://github.com/nightwatchjs/performance_benchmarking" class="performance__content-description-button">Run Sample Test</a>
+            <p class="performance__content-description-text">Experience lightning-fast tests with Nightwatch irrespective of
+              whether you run your tests on a single machine or multiple VMs.</p>
+            <a href="https://github.com/nightwatchjs/performance_benchmarking" class="performance__content-description-button">Run
+              Sample Test</a>
           </div>
         </article>
 
@@ -1923,11 +1903,10 @@ function activeLink(urlPart) {
                 </div>
                 <div class="comparison__content-wrapper-card-description">
                   <h3 class="comparison__content-wrapper-card-description-title">Real Browsers</h3>
-                  <p class="comparison__content-wrapper-card-description-subtitle">Run your tests on real browsers
-                    instead
-                    of browser engines.</p>
+                  <p class="comparison__content-wrapper-card-description-subtitle">Run your tests on real desktop and mobile browsers
+                    instead of browser engines.</p>
                 </div>
-              </article>
+                </article>
               <article class="comparison__content-wrapper-card">
                 <div class="comparison__content-wrapper-card-image">
                   <svg role="img" width="46" height="40" viewBox="0 0 46 40" fill="none"
@@ -1960,8 +1939,8 @@ function activeLink(urlPart) {
                 </div>
                 <div class="comparison__content-wrapper-card-description">
                   <h3 class="comparison__content-wrapper-card-description-title">Native Mobile Testing</h3>
-                  <p class="comparison__content-wrapper-card-description-subtitle">Test your native iOS and Android
-                    applications.</p>
+                  <p class="comparison__content-wrapper-card-description-subtitle">Test your native iOS and Android applications without
+                    any learning curve.</p>
                 </div>
               </article>
               <article class="comparison__content-wrapper-card">
@@ -2001,9 +1980,8 @@ function activeLink(urlPart) {
                 </div>
                 <div class="comparison__content-wrapper-card-description">
                   <h3 class="comparison__content-wrapper-card-description-title">Web Standards</h3>
-                  <p class="comparison__content-wrapper-card-description-subtitle">Nightwatch follows W3C protocol so
-                    your
-                    interactions reflect a real user.</p>
+                  <p class="comparison__content-wrapper-card-description-subtitle">Nightwatch follows W3C protocol so your interactions
+                    reflect a real user.</p>
                 </div>
               </article>
             </div>
@@ -2114,7 +2092,7 @@ function activeLink(urlPart) {
 
       <!-- Nightwatch Integrations section start -->
       <section class="integration">
-        <h2 class="integration__heading">Seamlessly<span class="integration__heading--highlight">Integrate
+        <h2 class="integration__heading">Seamlessly<span class="integration__heading--highlight">Integrate with
             Nightwatch</span></h2>
 
         <div class="integration__content" role="region" aria-label="Nightwatch Integrations">
@@ -2503,16 +2481,14 @@ function activeLink(urlPart) {
             </div>
             <div class="open-source-content-card-text">
               <h3 class="open-source-content-card-text--heading">No paywalls</h3>
-              <p class="open-source-content-card-text--paragraph">Nightwatch is committed to open source. Everything
-                works
-                for everyone.</p>
+              <p class="open-source-content-card-text--paragraph">Nightwatch is committed to open source. Everything works for
+                everyone.</p>
             </div>
           </article>
           <article class="open-source-content-card">
             <div class="open-source-content-card-image">
-              <svg role="img" width="70" height="56" viewBox="0 0 70 56" fill="none"
-                xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                text-rendering="geometricPrecision">
+              <svg role="img" width="70" height="56" viewBox="0 0 70 56" fill="none" xmlns="http://www.w3.org/2000/svg"
+                shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
                 <title>A mountain with flag icon</title>
                 <path
                   d="M46.6188 5.76953L30.6447 1.30664L30.6444 12.2073C30.6444 12.9045 31.3399 13.3877 31.9933 13.1444L46.6986 7.66981C47.6063 7.33192 47.5516 6.03012 46.6188 5.76953Z"
@@ -2537,15 +2513,14 @@ function activeLink(urlPart) {
             </div>
             <div class="open-source-content-card-text">
               <h3 class="open-source-content-card-text--heading">Responsive support</h3>
-              <p class="open-source-content-card-text--paragraph">The Nightwatch team and community is always ready to
-                help a fellow member out.</p>
+              <p class="open-source-content-card-text--paragraph">Get your questions answered quickly on our <a
+                  href="https://discord.com/invite/SN8Da2X" target="_blank" rel="noopener noreferrer">Discord</a> server.</p>
             </div>
           </article>
           <article class="open-source-content-card">
             <div class="open-source-content-card-image">
-              <svg role="img" width="58" height="64" viewBox="0 0 58 64" fill="none"
-                xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
-                text-rendering="geometricPrecision">
+              <svg role="img" width="58" height="64" viewBox="0 0 58 64" fill="none" xmlns="http://www.w3.org/2000/svg"
+                shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
                 <title>a black and white image of a wrench and gear</title>
                 <path
                   d="M50.7196 25.9743L50.7232 25.9714C51.5678 25.3045 51.7552 24.1385 51.2588 23.2282L51.2529 23.2173L51.2467 23.2066L46.6292 15.2167C46.0851 14.2342 44.9205 13.9269 44.0063 14.2595L43.9907 14.2651L43.9754 14.2713L38.7407 16.374C37.7579 15.6633 36.7133 15.0505 35.5968 14.5483L34.7991 8.98451C34.6594 7.90933 33.7283 7.14795 32.6756 7.14795H23.43C22.3772 7.14795 21.4462 7.90937 21.3064 8.98458L20.5087 14.5493C19.3881 15.0567 18.3454 15.6817 17.3706 16.3763L12.1302 14.2713L12.1302 14.2712L12.1219 14.268C11.137 13.8825 10.0038 14.2643 9.47641 15.2166L4.86096 23.203C4.29992 24.158 4.567 25.3276 5.38235 25.9714L5.38598 25.9743L9.82155 29.4436C9.75981 30.034 9.71732 30.6468 9.71732 31.2669C9.71732 31.8869 9.75981 32.4998 9.82155 33.0902L5.38598 36.5595L5.38598 36.5595L5.38235 36.5623C4.53777 37.2292 4.35036 38.3953 4.84677 39.3055L4.8527 39.3164L4.85889 39.3271L9.47641 47.3172C10.0205 48.2995 11.1851 48.6068 12.0993 48.2743L12.1148 48.2686L12.1302 48.2625L17.3648 46.1597C18.3477 46.8704 19.3923 47.4833 20.5088 47.9854L21.3064 53.5492C21.4461 54.6244 22.3772 55.3858 23.43 55.3858H32.6756C33.7283 55.3858 34.6594 54.6244 34.7991 53.5492L35.5969 47.9845C36.7175 47.4771 37.7601 46.852 38.735 46.1574L43.9754 48.2625L43.9753 48.2625L43.9836 48.2657C44.9686 48.6512 46.1019 48.2694 46.6292 47.317L51.2467 39.3271L51.2529 39.3164L51.2588 39.3055C51.7552 38.3953 51.5678 37.2292 50.7232 36.5623L50.7196 36.5595L46.2843 33.0904C46.3458 32.5068 46.3882 31.9036 46.3882 31.2669C46.3882 30.6301 46.3458 30.027 46.2843 29.4433L50.7196 25.9743ZM28.0528 38.3585C24.1443 38.3585 20.9629 35.1767 20.9629 31.2669C20.9629 27.357 24.1443 24.1752 28.0528 24.1752C31.9613 24.1752 35.1427 27.357 35.1427 31.2669C35.1427 35.1767 31.9613 38.3585 28.0528 38.3585Z"
@@ -2570,9 +2545,8 @@ function activeLink(urlPart) {
             </div>
             <div class="open-source-content-card-text">
               <h3 class="open-source-content-card-text--heading">Backed by BrowserStack</h3>
-              <p class="open-source-content-card-text--paragraph">Nightwatch is actively maintained by the
-                BrowserStack
-                Open Source initiative.</p>
+              <p class="open-source-content-card-text--paragraph">Nightwatch is actively maintained by the BrowserStack Open
+                Source Program.</p>
             </div>
           </article>
         </div>
@@ -2661,9 +2635,7 @@ function activeLink(urlPart) {
         <div class="call-to-action-content">
           <div class="call-to-action-content-wrapper">
             <h2 class="call-to-action-content--heading">Ready to try out?</h2>
-            <p class="call-to-action-content--paragraph">Over 6 million developers and 50,000 teams test on
-              BrowserStack.
-            </p>
+            <p class="call-to-action-content--paragraph">Trusted by over 100k repositories for their test automation!</p>
           </div>
           <div class="call-to-action-content-action">
             <div class="call-to-action-content-action-copy-command">
