added whats new in v3 link

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -29,7 +29,7 @@
                             <div class="collapse" id="index-collapse">
                                 <ul class="btn-toggle-nav">
                                     <li><a href="/guide/overview/what-is-nightwatch.html">What is Nightwatch?</a></li>
-                                    <li class="nav-item"><a href="/guide/overview/whats-new-in-v2.html">What’s new in v2?</a></li>
+                                    <li class="nav-item"><a href="/guide/overview/whats-new-in-v3.html">What's new in v3?</a></li>
                                     <li><a href="/guide/overview/whats-new.html">Release notes</a></li>
                                 </ul>
                             </div>
