--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -342,53 +342,6 @@
   height: 100%;
 }
 
-.features__community-stats {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  max-width: min(var(--layout-content-width), 90%);
-  width: 100%;
-  border: 5px solid var(--border-color);
-  border-radius: 20px;
-  padding: 40px 0;
-  margin: auto;
-}
-
-.features__community-stats__text {
-  color: var(--text-color);
-  font-size: var(--font-size-h5);
-  font-weight: 600;
-  line-height: var(--line-height-h5);
-}
-
-.features__community-stats-container {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1000px;
-}
-
-.features__community-stats-wrapper {
-  padding-bottom: 8px;
-}
-
-.features__community-stats-wrapper__heading {
-  color: var(--feature-title-text-color);
-  font-size: var(--font-size-h4);
-  font-weight: 700;
-  line-height: var(--line-height-h4);
-  text-align: center;
-}
-
-.features__community-stats-wrapper__sub-heading {
-  color: var(--feature-title-text-color);
-  font-size: var(--font-size-h7);
-  font-weight: 600;
-  line-height: var(--line-height-h7-xs);
-  text-align: center;
-}
-
 @media (max-width: 480px) {
   .hero__content {
     max-width: 30rem;
@@ -580,10 +533,58 @@
   width: 100%;
 }
 
+.features__community-stats {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  max-width: min(var(--layout-content-width), 90%);
+  width: 100%;
+  border: 5px solid var(--border-color);
+  border-radius: 20px;
+  padding: 40px 0;
+  margin: auto;
+}
+
+.features__community-stats__text {
+  color: var(--text-color);
+  font-size: var(--font-size-h5);
+  font-weight: 600;
+  line-height: var(--line-height-h5);
+}
+
+.features__community-stats-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1000px;
+}
+
+.features__community-stats-wrapper {
+  padding-bottom: 8px;
+}
+
+.features__community-stats-wrapper__heading {
+  color: var(--feature-title-text-color);
+  font-size: var(--font-size-h4);
+  font-weight: 700;
+  line-height: var(--line-height-h4);
+  text-align: center;
+}
+
+.features__community-stats-wrapper__sub-heading {
+  color: var(--feature-title-text-color);
+  font-size: var(--font-size-h7);
+  font-weight: 600;
+  line-height: var(--line-height-h7-xs);
+  text-align: center;
+}
+
 @media (max-width: 480px) {
   .features {
     max-width: 30rem;
     margin-top: 32px;
+    margin-bottom: 60px
   }
 
   .features__heading {
@@ -614,23 +615,51 @@
   .features__content-wrapper-description {
     padding-left: 59px;
     gap: 12px;
+    max-width: 92%;
   }
 
   .features__content-wrapper-description-title {
     font-size: var(--font-size-h7);
-    line-height: 32px;
+    line-height: var(--line-height-h7);
   }
 
   .features__content-wrapper-description-list {
-    font-size: var(--font-size-14);
-    line-height: calc(21/14);
+    font-size: var(--font-size-h8);
+    line-height: var(--line-height-h8);
     padding-left: 18px;
   }
 
   .features__content-image {
     padding-right: 60px;
     margin-left: 58px;
-    width: 100%;
+    width: 90%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+
+  .features__community-stats__text {
+    font-size: var(--font-size-base);
+    line-height: var(--line-height-base);
+  }
+
+  .features__community-stats-wrapper__heading {
+    font-size: var(--font-size-h7);
+    line-height: var(--line-height-h7);
+  }
+
+  .features__community-stats-wrapper__sub-heading {
+    font-size: var(--font-size-h8-s);
+    line-height: var(--line-height-h8);
+    max-width: 60px;
+  }
+
+  .features__community-stats-container {
+    justify-content: space-around;
+  }
+
+  .features__community-stats {
+    gap: 18px;
+    padding: 33px 0;
   }
 
   .features__path {
