--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -400,12 +400,13 @@
     font-size: var(--font-size-base);
     line-height: var(--line-height-base);
   }
-  
+
   .hero__companies__logos a img {
     width: 100px;
     height: 100%;
   }
 }
+
 /* Hero Section end */
 
 /* Nightwatch Feature section start */
@@ -1195,6 +1196,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  font-style: normal;
 }
 
 .testimonial__content-card-author-name .testimonial__content-card-author-name-title {
@@ -1224,6 +1226,36 @@
 .testimonial__path svg {
   width: 100%;
   margin: auto;
+}
+
+
+@media (max-width: 768px) {
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .testimonial__content.swiper-wrapper {
+    gap: unset;
+  }
+
+  .testimonial__content-card.swiper-slide {
+    flex: 1 0 100%;
+    display: flex;
+  }
+
+  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+    bottom: -48px;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet {
+    background-color: hsla(47, 18%, 80%, 1);
+    opacity: 1;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: hsla(23, 72%, 33%, 1);
+  }
 }
 
 /* Nightwatch Testimonials section end */
@@ -1260,6 +1292,7 @@
   border-radius: 20px;
   border: 5px solid var(--border-color);
   display: flex;
+  justify-content: center;
   gap: 38px;
   padding: 60px;
   flex-wrap: wrap;
@@ -1271,7 +1304,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1 0 183px;
+  flex: 1 0 0;
+  min-width: 150px;
+  max-width: 183px;
   background: var(--background-color);
   border: 2px solid var(--card-border-color);
   border-radius: 16px;
