--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -2449,6 +2449,88 @@ function activeLink(urlPart) {
               <div class="integration__content-card-title">Azure</div>
             </article>
           </a>
+          <a href="/guide/ci-integrations/run-nightwatch-on-azure-pipelines.html" target="_blank"
+            class="integration__content-card">
+            <article>
+              <div class="integration__content-card-image">
+                <svg role="img" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 66.4 65" style="enable-background:new 0 0 66.4 65;" xml:space="preserve" shape-rendering="geometricPrecision"
+                text-rendering="geometricPrecision">
+                <title>Saucelabs logo</title>
+                  <style type="text/css">
+                   .st0{fill:#3DDC91;}
+                  </style>
+                  <metadata>
+                   <sfw xmlns="ns_sfw;">
+                    <slices>
+                    </slices>
+                    <sliceSourceBounds bottomLeftOrigin="true" height="65" width="66.4" x="-168.7" y="0.4">
+                    </sliceSourceBounds>
+                   </sfw>
+                  </metadata>
+                  <g>
+                   <g>
+                    <g>
+                     <path class="st0" d="M27.7,32.5h-7.8l5.5-16.3h13.4L44.3,0H19.4c-3.6,0-6.7,2.2-7.9,5.6L0.4,38.1c-0.8,2.5-0.4,5.2,1.1,7.3
+                         c1.6,2.1,4.1,3.4,6.7,3.4h19.4l5.5-16.3H27.7L27.7,32.5z">
+                     </path>
+                     <path class="st0" d="M64.8,19.6c-1.6-2.1-4.1-3.4-6.7-3.4H38.7l-5.5,16.3h13.4L41,48.8H27.7L22.1,65H47c3.6,0,6.7-2.2,7.9-5.6
+                         L66,26.9C66.8,24.5,66.4,21.7,64.8,19.6L64.8,19.6z">
+                     </path>
+                    </g>
+                   </g>
+                  </g>
+                 </svg>
+              </div>
+              <div class="integration__content-card-title">SauceLabs</div>
+            </article>
+          </a>
+          <a href="/guide/ci-integrations/run-nightwatch-on-azure-pipelines.html" target="_blank"
+            class="integration__content-card">
+            <article>
+              <div class="integration__content-card-image">
+                <svg width="177px" height="177px" viewBox="0 0 177 177" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>
+                   Browserstack Logo
+                  </title>
+                  <defs>
+                   <radialGradient cx="49.8655914%" cy="49.9462366%" fx="49.8655914%" fy="49.9462366%" r="49.9193548%" id="radialGradient-1">
+                    <stop stop-color="#797979" offset="0%">
+                    </stop>
+                    <stop stop-color="#4C4C4C" offset="100%">
+                    </stop>
+                   </radialGradient>
+                  </defs>
+                  <g id="Browserstack_Logo_Monagram" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                   <g id="Browserstack-logo" fill-rule="nonzero">
+                    <circle id="Oval" fill="#F4B960" cx="88.5" cy="88.5" r="88.5">
+                    </circle>
+                    <circle id="Oval" fill="#E66F32" cx="80" cy="80" r="80">
+                    </circle>
+                    <circle id="Oval" fill="#E43C41" cx="90" cy="69" r="69">
+                    </circle>
+                    <circle id="Oval" fill="#BDD041" cx="95.5" cy="74.5" r="63.5">
+                    </circle>
+                    <circle id="Oval" fill="#6DB54C" cx="91" cy="79" r="59">
+                    </circle>
+                    <circle id="Oval" fill="#AEDAE6" cx="81.5" cy="70.5" r="49.5">
+                    </circle>
+                    <circle id="Oval" fill="#56B8DE" cx="90.5" cy="61.5" r="41.5">
+                    </circle>
+                    <circle id="Oval" fill="#00B1D5" cx="95.5" cy="67.5" r="36.5">
+                    </circle>
+                    <circle id="Oval" fill="url(#radialGradient-1)" cx="90" cy="72" r="31">
+                    </circle>
+                    <circle id="Oval" fill="#221F1F" cx="90" cy="72" r="31">
+                    </circle>
+                    <ellipse id="Oval" fill="#FFFFFF" transform="translate(102.180430, 60.765690) rotate(-65.831561) translate(-102.180430, -60.765690) " cx="102.18043" cy="60.7656904" rx="9.57121784" ry="6.21289579">
+                    </ellipse>
+                   </g>
+                  </g>
+                 </svg>
+              </div>
+              <div class="integration__content-card-title">Browserstack</div>
+            </article>
+          </a>
         </div>
 
         <div class="integration__path">
