--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -387,7 +387,7 @@ function activeLink(urlPart) {
             </div>
           </div>
           <div class="features__content-image">
-            <svg role="img" width="535" height="377" viewBox="0 0 535 377" fill="none"
+            <svg role="img" viewBox="0 0 535 377" fill="none"
               xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
               text-rendering="geometricPrecision">
               <title>Tests running in multiple browsers on a local machine and on multiple machines remotely</title>
