--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1245,6 +1245,65 @@
   will-change: background, color, border, box-shadow;
 }
 
+@media (max-width: 480px) {
+  .comparison {
+    margin-left: 50px;
+    max-width: min(480px, 85%);
+    margin-bottom: 70px;
+  }
+  
+  .comparison__heading {
+    text-align: unset;
+    font-size: var(--font-size-h5);
+    line-height: var(--line-height-h5);
+    padding-bottom: 24px;
+    margin-left: 9px;
+  }
+  
+  .comparison__content {
+    display: flex;
+    gap: 56px;
+  }
+  
+  .comparison__content-image {
+    display: none;
+  }
+  
+  .comparison__content-wrapper {
+    gap: 28px;
+    padding-top: 0px;
+  }
+  
+  .comparison__content-wrapper .comparison__content-wrapper-container {
+    gap: 20px;
+  }
+  
+  .comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card {
+    display: flex;
+    gap: 24px;
+    background: var(--background-color);
+    border-radius: 20px;
+    border: 5px solid var(--border-color);
+    flex: 2 1 0%;
+    padding: 21px 19px 15px 20px;
+  }
+  
+  .comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-description .comparison__content-wrapper-card-description-title {
+    font-size: var(--font-size-h7-mega);
+    line-height: var(--line-height-h7-mega);
+  }
+  
+  .comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-description .comparison__content-wrapper-card-description-subtitle {
+    font-size: var(--font-size-h8);
+    line-height: var(--line-height-h8);
+  }
+  
+  .comparison__content-wrapper-button {
+    font-size: var(--font-size-base);
+    line-height: var(--font-size-base);
+    padding: 16px 20px;
+  }
+}
 /* Nightwatch Comparison section end */
 
 /* Nightwatch Testimonials section start */
