--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -34,6 +34,28 @@
   max-width: min(1400px, 90%);
 }
 
+.navigation-list-pages {
+  align-items: center;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-list-pages .navigation-link {
+  color: var(--header-text-color);
+  font-size: initial;
+  font-weight: 600;
+  line-height: var(--line-height-19);
+  text-decoration: none;
+  padding: 28px 26px 28px 26px;
+}
+
+.navigation-list-pages .navigation-link:hover,  .navigation-link.active {
+  border-bottom: 3px solid var(--button-border-accent-color);
+  color: var(--header-text-color)
+}
+
 .navigation-list {
   align-items: center;
   display: flex;
@@ -51,11 +73,6 @@
   text-decoration: none;
 }
 
-.navigation-link:hover {
-  text-decoration: underline;
-  text-underline-offset: 4px;
-}
-
 .navigation-list>li>a svg {
   width: 30px;
   height: 100%;
@@ -64,7 +81,7 @@
 
 .navigation-list:last-child {
   gap: 32px;
-  padding-left: 52px;
+  padding-left: 26px;
 }
 
 .navigation-list>li button {
