added border for hover and active nav-links

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2974,7 +2974,25 @@ p.bottom-text {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  max-width: 1400px;
+  max-width: min(1400px, 90%);
+}
+
+
+.navigation-list-pages {
+  align-items: center;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-list-pages .navigation-link {
+  color: var(--header-text-color);
+  font-size: initial;
+  font-weight: 600;
+  line-height: var(--line-height-19);
+  text-decoration: none;
+  padding: 28px 26px 28px 26px;
 }
 
 .navigation-list {
@@ -2984,6 +3002,11 @@ p.bottom-text {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.navigation-list-pages .navigation-link:hover,  .navigation-link.active {
+  border-bottom: 3px solid var(--button-border-accent-color);
+  color: var(--header-text-color);
 }
 
 .navigation-link {
@@ -3014,7 +3037,7 @@ a.navigation-link.active {
 
 .navigation-list:last-child {
   gap: 32px;
-  padding-left: 52px;
+  padding-left: 26px;
 }
 
 .navigation-list>li button {
